--- a/public/Lifeclass.css
+++ b/public/Lifeclass.css
@@ -369,7 +369,7 @@ a{
   margin-top: 10%;
   font-size: 1vw;
   text-align: left;
-  color: black;
+  color: white;
   font-family: 'Source Code Pro';
 }
 
