--- a/public/Index.css
+++ b/public/Index.css
@@ -1375,6 +1375,7 @@ background: rgb(0,123,255,0.3);
       
         .equip{
           display: block;
+          margin-top: 5%;
         }
         
         .mentoring{
