--- a/public/AnnouncementNavBar.css
+++ b/public/AnnouncementNavBar.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
-
-
-header{
+header {
   z-index: 999;
   position: fixed;
   top: 0;
@@ -18,7 +16,7 @@ header{
   transition: 0.6s;
 }
 
-header .logo{
+header .logo {
   color: #fff;
   font-size: 1.8em;
   font-weight: 700;
@@ -27,18 +25,18 @@ header .logo{
   letter-spacing: 2px;
 }
 
-header .navigation{
+header .navigation {
   position: relative;
   line-height: 75px;
   transition: 0.6s;
   transition-property: line-height;
 }
 
-header.sticky .navigation{
+header.sticky .navigation {
   line-height: 60px;
 }
 
-header .navigation .menu{
+header .navigation .menu {
   position: relative;
   display: flex;
   justify-content: center;
@@ -46,7 +44,7 @@ header .navigation .menu{
   user-select: none;
 }
 
-.menu-item > a{
+.menu-item > a {
   color: #fff;
   font-size: 1em;
   text-decoration: none;
@@ -54,12 +52,12 @@ header .navigation .menu{
   padding: 25px 0;
 }
 
-.menu-item > a:hover{
+.menu-item > a:hover {
   color: #e23c52;
   transition: 0.3s;
 }
 
-.menu-item .sub-menu{
+.menu-item .sub-menu {
   position: absolute;
   background: black;
   top: 74px;
@@ -74,41 +72,41 @@ header .navigation .menu{
   transition-property: transform, opacity;
 }
 
-header.sticky .menu-item .sub-menu{
+header.sticky .menu-item .sub-menu {
   top: 60px;
 }
 
-.menu-item:hover .sub-menu{
+.menu-item:hover .sub-menu {
   pointer-events: all;
   transform: translateY(0);
   opacity: 1;
 }
 
-.menu-item .sub-menu .sub-item{
+.menu-item .sub-menu .sub-item {
   position: relative;
   padding: 7px 0;
   cursor: pointer;
   box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
 }
 
-.menu-item .sub-menu .sub-item a{
+.menu-item .sub-menu .sub-item a {
   color: #fff;
   font-size: 1em;
   text-decoration: none;
   padding: 15px 30px;
 }
 
-.menu-item .sub-menu .sub-item:hover{
+.menu-item .sub-menu .sub-item:hover {
   background: #e23c52;
 }
 
-.menu-item .sub-menu .sub-item:last-child:hover{
+.menu-item .sub-menu .sub-item:last-child:hover {
   border-radius: 0 0 8px 8px;
 }
 
-.more .more-menu{
+.more .more-menu {
   position: absolute;
-  background: #23252B;
+  background: #23252b;
   list-style: none;
   top: 0;
   left: 100%;
@@ -122,34 +120,36 @@ header.sticky .menu-item .sub-menu{
   transition-property: transform, opacity;
 }
 
-.more:hover .more-menu{
+.more:hover .more-menu {
   pointer-events: all;
   transform: translateY(0);
   opacity: 1;
 }
 
-.more .more-menu .more-item{
+.more .more-menu .more-item {
   padding: 7px 0;
   box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
   transition: 0.3s;
 }
 
-.more .more-menu .more-item:hover{
-  background: #4080EF;
+.more .more-menu .more-item:hover {
+  background: #4080ef;
 }
 
-.menu-btn{
+.menu-btn {
   display: none;
 }
 
-@media (max-width: 1060px){
+#highlightAnnounce {
+  color: #e23c52;
+}
 
-
-  header .logo{
+@media (max-width: 1060px) {
+  header .logo {
     font-size: 4vw;
   }
 
-  header .navigation .menu{
+  header .navigation .menu {
     position: fixed;
     display: block;
     background: black;
@@ -164,22 +164,20 @@ header.sticky .menu-item .sub-menu{
     transition-property: right, visibility;
   }
 
-  header.sticky .navigation{
+  header.sticky .navigation {
     line-height: 75px;
   }
 
-  header .navigation .menu.active{
+  header .navigation .menu.active {
     right: 0;
     visibility: visible;
   }
 
-  .menu-item{
+  .menu-item {
     position: relative;
   }
 
-
-
-  .menu-item .sub-menu{
+  .menu-item .sub-menu {
     opacity: 1;
     position: relative;
     top: 0;
@@ -189,31 +187,29 @@ header.sticky .menu-item .sub-menu{
     overflow: hidden;
     display: none;
   }
-  
- 
 
-  header.sticky .menu-item .sub-menu{
+  header.sticky .menu-item .sub-menu {
     top: 0;
   }
 
-  .menu-item:hover .sub-menu{
+  .menu-item:hover .sub-menu {
     transform: translateX(10px);
   }
 
-  .menu-item .sub-menu .sub-item{
+  .menu-item .sub-menu .sub-item {
     box-shadow: none;
   }
 
-  .menu-item .sub-menu .sub-item:hover{
+  .menu-item .sub-menu .sub-item:hover {
     background: none;
   }
 
-  .menu-item .sub-menu .sub-item a:hover{
-    color: #4080EF;
+  .menu-item .sub-menu .sub-item a:hover {
+    color: #4080ef;
     transition: 0.3s;
   }
 
-  .more .more-menu{
+  .more .more-menu {
     opacity: 1;
     position: relative;
     left: 0;
@@ -223,21 +219,21 @@ header.sticky .menu-item .sub-menu{
     display: none;
   }
 
-  .more .more-menu .more-item{
+  .more .more-menu .more-item {
     box-shadow: none;
   }
 
-  .more .more-menu .more-item:hover{
+  .more .more-menu .more-item:hover {
     background: none;
   }
 
-  .more .more-menu .more-item a{
+  .more .more-menu .more-item a {
     margin-left: 20px;
   }
 
-  .close-btn{
+  .close-btn {
     position: absolute;
-    background: url(HeadnFooter/closewindow.png)no-repeat;
+    background: url(HeadnFooter/closewindow.png) no-repeat;
     width: 40px;
     height: 40px;
     background-size: 25px;
@@ -248,8 +244,8 @@ header.sticky .menu-item .sub-menu{
     cursor: pointer;
   }
 
-  .menu-btn{
-    background: url(HeadnFooter/menu.png)no-repeat;
+  .menu-btn {
+    background: url(HeadnFooter/menu.png) no-repeat;
     width: 40px;
     height: 40px;
     background-size: 30px;
@@ -258,11 +254,11 @@ header.sticky .menu-item .sub-menu{
     display: block;
   }
 
-  header{
+  header {
     padding: 15px 20px;
   }
 
-  header.sticky{
+  header.sticky {
     padding: 10px 20px;
   }
 }
