--- a/public/NavbarMentoring.css
+++ b/public/NavbarMentoring.css
@@ -1,4 +1,4 @@
-header{
+header {
   z-index: 999;
   position: fixed;
   top: 0;
@@ -13,7 +13,7 @@ header{
   transition: 0.6s;
 }
 
-header .logo{
+header .logo {
   color: #fff;
   font-size: 1.8em;
   font-weight: 700;
@@ -23,7 +23,7 @@ header .logo{
   margin-left: 6.5%;
 }
 
-header .navigation{
+header .navigation {
   position: relative;
   line-height: 75px;
   transition: 0.6s;
@@ -31,11 +31,11 @@ header .navigation{
   margin-right: 8.5%;
 }
 
-header.sticky .navigation{
+header.sticky .navigation {
   line-height: 60px;
 }
 
-header .navigation .menu{
+header .navigation .menu {
   position: relative;
   display: flex;
   justify-content: center;
@@ -43,7 +43,7 @@ header .navigation .menu{
   user-select: none;
 }
 
-.menu-item > a{
+.menu-item > a {
   color: #fff;
   font-size: 1em;
   text-decoration: none;
@@ -51,12 +51,12 @@ header .navigation .menu{
   padding: 25px 0;
 }
 
-.menu-item > a:hover{
-  color: #FFA3FD;
+.menu-item > a:hover {
+  color: #ffa3fd;
   transition: 0.3s;
 }
 
-.menu-item .sub-menu{
+.menu-item .sub-menu {
   position: absolute;
   background: #191825;
   top: 74px;
@@ -71,46 +71,46 @@ header .navigation .menu{
   transition-property: transform, opacity;
 }
 
-header.sticky .menu-item .sub-menu{
+header.sticky .menu-item .sub-menu {
   top: 60px;
 }
 
-.menu-item:hover .sub-menu{
+.menu-item:hover .sub-menu {
   pointer-events: all;
   transform: translateY(0);
   opacity: 1;
 }
 
-.menu-item .sub-menu .sub-item{
+.menu-item .sub-menu .sub-item {
   position: relative;
   padding: 7px 0;
   cursor: pointer;
   box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
 }
 
-.menu-item .sub-menu .sub-item a{
+.menu-item .sub-menu .sub-item a {
   color: #fff;
   font-size: 1em;
   text-decoration: none;
   padding: 15px 30px;
 }
 
-.menu-item .sub-menu .sub-item:hover{
-  background: #FFA3FD;
+.menu-item .sub-menu .sub-item:hover {
+  background: #ffa3fd;
   border: none;
 }
 
-.menu-item .sub-menu .sub-item a:hover{
+.menu-item .sub-menu .sub-item a:hover {
   color: #191825;
 }
 
-.menu-item .sub-menu .sub-item:last-child:hover{
+.menu-item .sub-menu .sub-item:last-child:hover {
   border-radius: 0 0 8px 8px;
 }
 
-.more .more-menu{
+.more .more-menu {
   position: absolute;
-  background: #23252B;
+  background: #23252b;
   list-style: none;
   top: 0;
   left: 100%;
@@ -124,34 +124,36 @@ header.sticky .menu-item .sub-menu{
   transition-property: transform, opacity;
 }
 
-.more:hover .more-menu{
+.more:hover .more-menu {
   pointer-events: all;
-  transform: translateY( 0);
+  transform: translateY(0);
   opacity: 1;
 }
 
-.more .more-menu .more-item{
+.more .more-menu .more-item {
   padding: 7px 0;
   box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
   transition: 0.3s;
 }
 
-.more .more-menu .more-item:hover{
-  background: #4080EF;
+.more .more-menu .more-item:hover {
+  background: #4080ef;
 }
 
-.menu-btn{
+.menu-btn {
   display: none;
 }
 
-@media (max-width: 1060px){
+#highlightEquip {
+  color: #ffa3fd;
+}
 
-
-  header .navigation{
+@media (max-width: 1060px) {
+  header .navigation {
     margin-right: 0%;
   }
 
-  header .navigation .menu{
+  header .navigation .menu {
     position: fixed;
     display: block;
     background: #191825;
@@ -166,20 +168,20 @@ header.sticky .menu-item .sub-menu{
     transition-property: right, visibility;
   }
 
-  header.sticky .navigation{
+  header.sticky .navigation {
     line-height: 75px;
   }
 
-  header .navigation .menu.active{
+  header .navigation .menu.active {
     right: 0;
     visibility: visible;
   }
 
-  .menu-item{
+  .menu-item {
     position: relative;
   }
 
-  .menu-item .sub-menu{
+  .menu-item .sub-menu {
     opacity: 1;
     position: relative;
     top: 0;
@@ -190,28 +192,28 @@ header.sticky .menu-item .sub-menu{
     display: none;
   }
 
-  header.sticky .menu-item .sub-menu{
+  header.sticky .menu-item .sub-menu {
     top: 0;
   }
 
-  .menu-item:hover .sub-menu{
+  .menu-item:hover .sub-menu {
     transform: translateX(10px);
   }
 
-  .menu-item .sub-menu .sub-item{
+  .menu-item .sub-menu .sub-item {
     box-shadow: none;
   }
 
-  .menu-item .sub-menu .sub-item:hover{
+  .menu-item .sub-menu .sub-item:hover {
     background: none;
   }
 
-  .menu-item .sub-menu .sub-item a:hover{
-    color: #4080EF;
+  .menu-item .sub-menu .sub-item a:hover {
+    color: #4080ef;
     transition: 0.3s;
   }
 
-  .more .more-menu{
+  .more .more-menu {
     opacity: 1;
     position: relative;
     left: 0;
@@ -221,21 +223,21 @@ header.sticky .menu-item .sub-menu{
     display: none;
   }
 
-  .more .more-menu .more-item{
+  .more .more-menu .more-item {
     box-shadow: none;
   }
 
-  .more .more-menu .more-item:hover{
+  .more .more-menu .more-item:hover {
     background: none;
   }
 
-  .more .more-menu .more-item a{
+  .more .more-menu .more-item a {
     margin-left: 20px;
   }
 
-  .close-btn{
+  .close-btn {
     position: absolute;
-    background: url(HeadnFooter/closewindow.png)no-repeat;
+    background: url(HeadnFooter/closewindow.png) no-repeat;
     width: 40px;
     height: 40px;
     background-size: 25px;
@@ -246,8 +248,8 @@ header.sticky .menu-item .sub-menu{
     cursor: pointer;
   }
 
-  .menu-btn{
-    background: url(HeadnFooter/menu.png)no-repeat;
+  .menu-btn {
+    background: url(HeadnFooter/menu.png) no-repeat;
     width: 40px;
     height: 40px;
     background-size: 30px;
@@ -257,11 +259,11 @@ header.sticky .menu-item .sub-menu{
     margin-right: 10%;
   }
 
-  header{
+  header {
     padding: 15px 20px;
   }
 
-  header.sticky{
+  header.sticky {
     padding: 10px 20px;
   }
 }
