--- a/public/j12.css
+++ b/public/j12.css
@@ -1141,8 +1141,8 @@ a {
 }
 
 #blogs {
-  background-color: #00ffff;
-  color: #ff69b4;
+  background-color: #ff69b4;
+  color: white;
   padding-top: 5%;
   padding-bottom: 5%;
   margin-top: 5%;
