--- a/public/EquipForm.css
+++ b/public/EquipForm.css
@@ -1,41 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    font-family: 'Roboto Condensed';
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  font-family: "Roboto Condensed";
 }
 
-
-a{
-    text-decoration: none;
-    color: none;
+a {
+  text-decoration: none;
+  color: none;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #191825;
+  background: #191825;
 }
 ::-webkit-scrollbar-thumb {
-    background: #FFA3FD;
+  background: #ffa3fd;
 }
-::selection{
-    background: rgb(0,123,255,0.3);
+::selection {
+  background: rgb(0, 123, 255, 0.3);
 }
-.content{
+.content {
   max-width: 1550px;
   margin: auto;
   padding: 0 30px;
 }
-.navbar{
+.navbar {
   position: fixed;
   width: 100%;
   z-index: 2;
@@ -43,90 +41,90 @@ a{
   transition: all 0.3s ease;
   /* background-color: #191825; */
 }
-.navbar.sticky{
+.navbar.sticky {
   background: #1b1b1b;
   padding: 10px 0;
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
 }
-.navbar .content{
+.navbar .content {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.navbar .logo img{
+.navbar .logo img {
   width: 70%;
 }
-.navbar .menu-list{
+.navbar .menu-list {
   display: inline-flex;
 }
-.menu-list li{
+.menu-list li {
   list-style: none;
 }
-.menu-list li a{
+.menu-list li a {
   color: #fff;
   font-size: 1.3vw;
   margin-left: 25px;
   text-decoration: none;
   transition: all 0.3s ease;
 }
-.menu-list li a:hover{
+.menu-list li a:hover {
   color: #e23c52;
   z-index: 2;
 }
 
-.icon{
+.icon {
   cursor: pointer;
   display: none;
 }
-.icon img{
+.icon img {
   width: 100%;
   max-width: 50px;
 }
-.menu-list .cancel-btn{
+.menu-list .cancel-btn {
   position: absolute;
   right: 30px;
   top: 20px;
   z-index: 2;
 }
 
-
-.textPrayer{
-    padding-top: 15%;
+.textPrayer {
+  padding-top: 15%;
 }
 
-.textPrayer h1{
-    text-align: center;
-    margin-bottom: 2%;
-    font-family: 'Source Code Pro';
-    font-size: 2.5vw;
+.textPrayer h1 {
+  text-align: center;
+  margin-bottom: 2%;
+  font-family: "Source Code Pro";
+  font-size: 2.5vw;
 }
 
-form{
-    display: block;
-    margin: auto;
-    width: 50%;
-    border: 1px solid black;
-    padding: 3%;
-    border-radius: 10px;
+form {
+  display: block;
+  margin: auto;
+  width: 50%;
+  border: 1px solid black;
+  padding: 3%;
+  border-radius: 10px;
 }
 
-label{
-    font-size: 1.2vw;
-    font-family: 'Source Code Pro';
+label {
+  font-size: 1.2vw;
+  font-family: "Source Code Pro";
 }
 
-input{
-    width: 100%;
-    margin-bottom: 2%;
-    margin-top: 2%;
-    font-size: 1.2vw;
-    padding: 1%;
-    outline: none;
+input {
+  width: 100%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  font-size: 1.2vw;
+  padding: 1%;
+  outline: none;
 }
-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: rgb(8, 8, 8);
-    opacity: 0.3; /* Firefox */
-  }
+input::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(8, 8, 8);
+  opacity: 0.3; /* Firefox */
+}
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -134,16 +132,95 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-#nice{
+#nice {
+  width: 5%;
+  cursor: pointer;
+}
+
+.containers {
+  margin-bottom: 5%;
+}
+
+textarea {
+  width: 100%;
+  resize: none;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  font-size: 1.2vw;
+  padding: 1%;
+  outline: none;
+}
+
+.blockThis {
+  display: block;
+}
+
+.selectOption {
+  padding: 1%;
+  margin: 1% 0%;
+  font-size: 1.2vw;
+  font-family: "Source Code Pro";
+}
+
+#equipFormBtn {
+  padding: 2%;
+  /* background-color: #191825; */
+  color: white;
+  border: none;
+  margin-top: 2%;
+  transition: 0.5s;
+  font-family: "Source Code Pro";
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@media (max-width: 500px) {
+  .textPrayer {
+    padding-top: 40%;
+  }
+
+  .textPrayer h1 {
+    text-align: center;
+    margin-bottom: 2%;
+    font-family: "Source Code Pro";
+    font-size: 5vw;
+  }
+
+  form {
+    display: block;
+    margin: auto;
+    width: 90%;
+    border: 1px solid black;
+    padding: 5%;
+    border-radius: 10px;
+    margin-bottom: 20%;
+  }
+
+  label {
+    font-size: 3vw;
+    font-family: "Source Code Pro";
+  }
+
+  input {
+    width: 100%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    font-size: 3vw;
+    padding: 1%;
+    outline: none;
+  }
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  #nice {
     width: 5%;
-    cursor: pointer;
-}
+  }
 
-.containers{
-    margin-bottom: 5%;
-}
-
-textarea{
+  textarea {
     width: 100%;
     resize: none;
     margin-bottom: 2%;
@@ -151,277 +228,206 @@ textarea{
     font-size: 1.2vw;
     padding: 1%;
     outline: none;
-}
+  }
 
-#equipFormBtn{
+  button {
     padding: 2%;
-    /* background-color: #191825; */
-    color: white;
     border: none;
     margin-top: 2%;
     transition: 0.5s;
-    font-family: 'Source Code Pro';
-    border-radius: 10px;
-    cursor: pointer;
+    font-family: "Source Code Pro";
+    font-size: 2.2vw;
+    width: 30%;
+  }
 }
 
-@media (max-width:500px) {
-    .textPrayer{
-        padding-top: 40%;
-    }
-    
-    .textPrayer h1{
-        text-align: center;
-        margin-bottom: 2%;
-        font-family: 'Source Code Pro';
-        font-size: 5vw;
-    }
-    
-    form{
-        display: block;
-        margin: auto;
-        width: 90%;
-        border: 1px solid black;
-        padding: 5%;
-        border-radius: 10px;
-        margin-bottom: 20%;
-    }
-    
-    label{
-        font-size: 3vw;
-        font-family: 'Source Code Pro';
-    }
-    
-    input{
-        width: 100%;
-        margin-bottom: 2%;
-        margin-top: 2%;
-        font-size: 3vw;
-        padding: 1%;
-        outline: none;
-    }
-    
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-    
-    #nice{
-        width: 5%;
-    }
-    
-    textarea{
-        width: 100%;
-        resize: none;
-        margin-bottom: 2%;
-        margin-top: 2%;
-        font-size: 1.2vw;
-        padding: 1%;
-        outline: none;
-    }
-    
-    button{
-        padding: 2%;
-        border: none;
-        margin-top: 2%;
-        transition: 0.5s;
-        font-family: 'Source Code Pro';
-        font-size: 2.2vw;
-        width: 30%;
-    }
+button:hover {
+  background-color: #ffa3fd;
 }
 
-button:hover{
-    background-color: #FFA3FD;
+.bottomLinks {
+  display: flex;
+  background-color: #191825;
+  color: white;
+  border-bottom: 3px #ffa3fd solid;
+  width: 100%;
 }
 
-.bottomLinks{
-    display: flex;
-    background-color: #191825;
-    color: white;
-    border-bottom: 3px #FFA3FD solid;
-    width: 100%;
+.firstGrid {
+  text-align: center;
+  border-right: white 1px solid;
+  padding: 2%;
+  width: 20%;
 }
-  
-.firstGrid{
-    text-align: center;
-    border-right: white 1px solid;
-    padding: 2%;
-    width: 20%;
+
+.firstGrid img {
+  width: 50%;
 }
-  
-.firstGrid img{
-    width: 50%;
+
+.firstGrid h1 {
+  margin-top: 5%;
+  text-align: center;
 }
-  
-.firstGrid h1{
-    margin-top: 5%;
-    text-align: center;
+
+.firstGrid a {
+  margin-top: 7%;
+  font-size: 3.5vw;
+  font-family: "Source Code Pro";
+  color: white;
 }
-  
-.firstGrid a{
-    margin-top: 7%;
-    font-size: 3.5vw;
-    font-family: 'Source Code Pro';
-    color: white;
+
+.firstGrid p {
+  margin-top: 10%;
+  font-size: 1vw;
+  text-align: left;
+  color: #ffa3fd;
+  font-family: "Source Code Pro";
 }
-  
-.firstGrid p{
-    margin-top: 10%;
-    font-size: 1vw;
-    text-align: left;
-    color: #FFA3FD;
-    font-family: 'Source Code Pro';
-}
-  
+
 /* =================================================== */
-  
-  
-.secondGrid{
-    width: 20%;
-    display: inline-block;
-    margin-left: 3%;
-    margin-top: 4%;
+
+.secondGrid {
+  width: 20%;
+  display: inline-block;
+  margin-left: 3%;
+  margin-top: 4%;
 }
-  
-.secondGrid p{
-    font-family: 'Source Code Pro';
-    font-size: 1.2vw;
+
+.secondGrid p {
+  font-family: "Source Code Pro";
+  font-size: 1.2vw;
 }
-  
-.botli{
-    margin-top: 40%;
+
+.botli {
+  margin-top: 40%;
 }
-  
-.botli p{
-    margin-bottom: 2%;
+
+.botli p {
+  margin-bottom: 2%;
 }
-  
-.botli a{
-    font-family: 'Source Code Pro';
-    font-size: 1.2vw;
-    color: gray;
+
+.botli a {
+  font-family: "Source Code Pro";
+  font-size: 1.2vw;
+  color: gray;
 }
-  
-.botli a:hover{
-    color: white;
-    transition: 0.5s;
+
+.botli a:hover {
+  color: white;
+  transition: 0.5s;
 }
-  
+
 /* =================================================== */
-  
-.thirdGrid{
-    width: 20%;
-    display: inline-block;
-    margin-top: 4%;
+
+.thirdGrid {
+  width: 20%;
+  display: inline-block;
+  margin-top: 4%;
 }
-  
-.thirdGrid p{
-    font-family: 'Source Code Pro';
-    font-size: 1.2vw;
+
+.thirdGrid p {
+  font-family: "Source Code Pro";
+  font-size: 1.2vw;
 }
-  
-.botli{
-    margin-top: 40%;
+
+.botli {
+  margin-top: 40%;
 }
-  
-.botli p{
-    margin-bottom: 2%;
+
+.botli p {
+  margin-bottom: 2%;
 }
-  
-.botli a{
-    font-family: 'Source Code Pro';
-    font-size: 1.2vw;
-    color: white;
+
+.botli a {
+  font-family: "Source Code Pro";
+  font-size: 1.2vw;
+  color: white;
 }
-  
-.botli a:hover{
-    color: #FFA3FD;
-    transition: 0.5s;
+
+.botli a:hover {
+  color: #ffa3fd;
+  transition: 0.5s;
 }
-  
-.mobileLinks{
-    display: none;
+
+.mobileLinks {
+  display: none;
 }
 
 @media (max-width: 500px) {
+  .bottomLinks {
+    display: none;
+  }
 
-    .bottomLinks{
-        display: none;
-     }
-       
-     /* ================================================ */
-     
-     .mobileLinks{
-         margin: 0;
-         display: block;
-         /* background-color: #191825; */
-         color: white;
-         border-bottom: 5px #FFA3FD  solid;
-         overflow-y: hidden;
-     }
-     
-     .mobileLinks .firstGrid{
-         text-align: left;
-         border-right: white 0px solid;
-         width: 80%;
-         padding: 2%;
-         padding-left: 10%;
-         padding-right: 10%;
-         border-bottom: white 1px solid;
-         padding-top: 10%;
-         padding-bottom: 10%;
-     }
-       
-     .mobileLinks .firstGrid img{
-         width: 25%;
-         margin-top: 2%;
-     }
-       
-       .mobileLinks .firstGrid h1{
-         margin-top: 2%;
-         text-align: left;
-     }
-       
-     .mobileLinks .firstGrid a{
-         margin-top: 1%;
-         font-size: 7vw;
-         color: white;
-         font-family: 'Source Code Pro';
-     }
-       
-     .mobileLinks .firstGrid p{
-         font-size: 3vw;
-         color: #FFA3FD;
-         font-family: 'Source Code Pro';
-         margin-top: 10%;
-     }
-     
-     .mobileLinks .secondLane{
-         padding-left: 10%;
-         padding-right: 10%;
-         padding-bottom: 5%;
-         width: 100%;
-         color: white;
-         margin-top: 5%;
-     }
-       
-     .mobileLinks .noice{
-         margin-bottom: 5%;
-         font-family: 'Source Code Pro';
-         font-size: 4vw;
-         color: white;
-     }
-     
-     .mobileLinks .links{
-         margin-top: 5%;
-         font-size: 4vw;
-         
-     }
-     
-     .mobileLinks .links a{
-         color: #FFA3FD;
-         font-family: 'Source Code Pro';
-     }
+  /* ================================================ */
+
+  .mobileLinks {
+    margin: 0;
+    display: block;
+    /* background-color: #191825; */
+    color: white;
+    border-bottom: 5px #ffa3fd solid;
+    overflow-y: hidden;
+  }
+
+  .mobileLinks .firstGrid {
+    text-align: left;
+    border-right: white 0px solid;
+    width: 80%;
+    padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+    border-bottom: white 1px solid;
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
+
+  .mobileLinks .firstGrid img {
+    width: 25%;
+    margin-top: 2%;
+  }
+
+  .mobileLinks .firstGrid h1 {
+    margin-top: 2%;
+    text-align: left;
+  }
+
+  .mobileLinks .firstGrid a {
+    margin-top: 1%;
+    font-size: 7vw;
+    color: white;
+    font-family: "Source Code Pro";
+  }
+
+  .mobileLinks .firstGrid p {
+    font-size: 3vw;
+    color: #ffa3fd;
+    font-family: "Source Code Pro";
+    margin-top: 10%;
+  }
+
+  .mobileLinks .secondLane {
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 5%;
+    width: 100%;
+    color: white;
+    margin-top: 5%;
+  }
+
+  .mobileLinks .noice {
+    margin-bottom: 5%;
+    font-family: "Source Code Pro";
+    font-size: 4vw;
+    color: white;
+  }
+
+  .mobileLinks .links {
+    margin-top: 5%;
+    font-size: 4vw;
+  }
+
+  .mobileLinks .links a {
+    color: #ffa3fd;
+    font-family: "Source Code Pro";
+  }
 }
